# text-spotting

./: .gitignore  README.md  pyproject.toml  requirements.txt
invoice_grounding/: __init__.py  candidate_generation.py  cli.py  doctr_ocr.py  grounding.py  matching.py  models.py  normalization.py  schema_traversal.py  visualization.py
scripts/: evaluate_samples.py
tests/: conftest.py  test_grounding.py  test_matching.py  test_normalization.py  test_schema_traversal.py
