[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-grounding"
version = "0.1.0"
description = "Ground structured invoice extraction values to OCR word boxes using docTR."
requires-python = ">=3.10"
dependencies = [
    "python-doctr[torch]>=0.9.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "rapidfuzz>=3.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that run docTR OCR and may download pretrained weights",
]
testpaths = ["tests"]
